--- a/seminar_paper/References.bib
+++ b/seminar_paper/References.bib
@@ -1,313 +1,28 @@
-﻿%% This BibTeX bibliography file was created using BibDesk.
+%% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Claudia Günther at 2018-03-12 18:11:38 +0100
+%% Created for Claudia Günther at 2018-07-06 14:17:37 +0200 
 
 
-%% Saved with string encoding Unicode (UTF-8)
+%% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@article{eurostat2012active,
-	Author = {EuroStat European Commission and others},
-	Date-Added = {2018-03-12 17:11:17 +0000},
-	Date-Modified = {2018-03-12 17:11:17 +0000},
-	Journal = {A statistical portrait of the European Union},
-	Title = {Active ageing and solidarity between generations},
-	Volume = {2012},
-	Year = {2012}}
+@article{zerrahn2018economics,
+	Author = {Zerrahn, Alexander and Schill, Wolf-Peter and Kemfert, Claudia},
+	Date-Added = {2018-07-06 12:17:31 +0000},
+	Date-Modified = {2018-07-06 12:17:31 +0000},
+	Journal = {arXiv preprint arXiv:1802.07885},
+	Title = {On the economics of electrical storage for variable renewable energy sources},
+	Year = {2018}}
 
-@misc{borsch2017survey,
-	Author = {Borsch-Supan, A},
-	Date-Added = {2018-03-12 16:56:51 +0000},
-	Date-Modified = {2018-03-12 16:56:51 +0000},
-	Title = {Survey of Health, Ageing and Retirement in Europe (SHARE) Wave 2. Release version: 6.0. 0. SHARE-ERIC [Data set]},
+@article{sinn2017buffering,
+	Author = {Sinn, Hans-Werner},
+	Date-Added = {2018-07-06 12:16:21 +0000},
+	Date-Modified = {2018-07-06 12:16:21 +0000},
+	Journal = {European Economic Review},
+	Pages = {130--150},
+	Publisher = {Elsevier},
+	Title = {Buffering volatility: A study on the limits of Germany's energy revolution},
+	Volume = {99},
 	Year = {2017}}
-
-@article{kassenboehmer2008you,
-	Author = {Kassenboehmer, Sonja C and Haisken-DeNew, John P},
-	Date-Added = {2018-03-12 16:47:18 +0000},
-	Date-Modified = {2018-03-12 16:47:18 +0000},
-	Title = {You're Fired! The Causal Negative Effect of Unemployment on Life Satisfaction},
-	Year = {2008}}
-
-@article{shields2005exploring,
-	Author = {Shields, Michael A and Price, Stephen Wheatley},
-	Date-Added = {2018-03-12 16:45:49 +0000},
-	Date-Modified = {2018-03-12 16:45:49 +0000},
-	Journal = {Journal of the Royal Statistical Society: Series A (Statistics in Society)},
-	Number = {3},
-	Pages = {513--537},
-	Publisher = {Wiley Online Library},
-	Title = {Exploring the economic and social determinants of psychological well-being and perceived social support in England},
-	Volume = {168},
-	Year = {2005}}
-
-@article{karpansalo2004perceived,
-	Author = {Karpansalo, Minna and Manninen, Pirjo and Kauhanen, Jussi and Lakka, Timo A and Salonen, Jukka T},
-	Date-Added = {2018-03-12 16:38:42 +0000},
-	Date-Modified = {2018-03-12 16:38:42 +0000},
-	Journal = {Scandinavian journal of work, environment \& health},
-	Pages = {287--292},
-	Publisher = {JSTOR},
-	Title = {Perceived health as a predictor of early retirement},
-	Year = {2004}}
-
-@article{cai2006health,
-	Author = {Cai, Lixin and Kalb, Guyonne},
-	Date-Added = {2018-03-12 16:35:37 +0000},
-	Date-Modified = {2018-03-12 16:35:37 +0000},
-	Journal = {Health economics},
-	Number = {3},
-	Pages = {241--261},
-	Publisher = {Wiley Online Library},
-	Title = {Health status and labour force participation: evidence from Australia},
-	Volume = {15},
-	Year = {2006}}
-
-@article{monden2005changing,
-	Author = {Monden, Christiaan WS},
-	Date-Added = {2018-03-12 16:34:35 +0000},
-	Date-Modified = {2018-03-12 16:34:35 +0000},
-	Journal = {The European Journal of Public Health},
-	Number = {5},
-	Pages = {498--503},
-	Publisher = {Oxford University Press},
-	Title = {Changing social variations in self-assessed health in times of transition? The Baltic States 1994--1999},
-	Volume = {15},
-	Year = {2005}}
-
-@article{chernozhukov2013inference,
-	Author = {Chernozhukov, Victor and Fern{\'a}ndez-Val, Iv{\'a}n and Melly, Blaise},
-	Date-Added = {2018-03-12 15:00:05 +0000},
-	Date-Modified = {2018-03-12 15:00:05 +0000},
-	Journal = {Econometrica},
-	Number = {6},
-	Pages = {2205--2268},
-	Publisher = {Wiley Online Library},
-	Title = {Inference on counterfactual distributions},
-	Volume = {81},
-	Year = {2013}}
-
-@article{kalwij2005labour,
-	Author = {Kalwij, Adriaan and Vermeulen, Frederic},
-	Date-Added = {2018-02-28 09:17:24 +0000},
-	Date-Modified = {2018-02-28 09:17:24 +0000},
-	Title = {Labour force participation of the elderly in Europe: The importance of being healthy},
-	Year = {2005}}
-
-@book{greene2012econometric,
-	Author = {Greene, William H},
-	Date-Added = {2018-02-27 10:53:23 +0000},
-	Date-Modified = {2018-02-27 10:54:08 +0000},
-	Edition = {Seventh Edition},
-	Publisher = {Pearson Education},
-	Title = {Econometric analysis},
-	Year = {2012}}
-
-@book{wooldridge2010econometric,
-	Author = {Wooldridge, Jeffrey M},
-	Date-Added = {2018-02-26 20:19:48 +0000},
-	Date-Modified = {2018-02-26 20:19:48 +0000},
-	Publisher = {MIT press},
-	Title = {Econometric analysis of cross section and panel data},
-	Year = {2010}}
-
-@article{schild2017,
-	Author = {Schild, K.-H.},
-	Journal = {Abt. Statistik, Fb. Wirtschaftswissenschaften},
-	Publisher = {Philipps-Universitaet Marburg},
-	Title = {Binaere Auswahlmodelle},
-	Month = {November},
-	Year = {2017}}
-
-@misc{eurostat,
-  author = {Eurostat},
-  title = {{Share of overweight population by sex and age}},
-  howpublished = "\url{http://ec.europa.eu/eurostat/statistics-explained/index.php/File:Share_of_overweight_population_by_sex_and_age,_2014.png/}",
-  year = {2014},
-  note = "[Online; accessed 13-March-2018]"
-}
-
- @Manual{stats,
-    title = {R: A Language and Environment for Statistical Computing},
-    author = {{R Core Team}},
-    organization = {R Foundation for Statistical Computing},
-    address = {Vienna, Austria},
-    year = {2013},
-    note = {{ISBN} 3-900051-07-0},
-    url = {http://www.R-project.org/},
-  }
-
-@book{wooldridge2012,
-	Author = {Wooldridge, Jeffrey M},
-	Publisher = {South Western College Pub - A Modern Approach},
-	Volume = {5},
-	Title = {Introductory Econometrics},
-	Year = {2012}}
-
-@book{dergutedietmar,
-	Author = {Bauer, Dietmar},
-	Publisher = {Universitaet Bielefeld},
-	Title = {Einfuehrung in die Mikrooekonometrie},
-	Year = {2014}}
-
-  @Manual{mfx,
-    title = {mfx: Marginal Effects, Odds Ratios and Incidence Rate Ratios for GLMs},
-    author = {Alan Fernihough},
-    year = {2014},
-    note = {R package version 1.1},
-    url = {https://CRAN.R-project.org/package=mfx},
-  }
-
-  @Manual{dplyr,
-    title = {dplyr: A Grammar of Data Manipulation},
-    author = {Hadley Wickham and Romain Francois and Lionel Henry and Kirill Müller},
-    year = {2017},
-    note = {R package version 0.7.4},
-    url = {https://CRAN.R-project.org/package=dplyr},
-  }
-
-
-  @Manual{magrittr,
-    title = {magrittr: A Forward-Pipe Operator for R},
-    author = {Stefan Milton Bache and Hadley Wickham},
-    year = {2014},
-    note = {R package version 1.5},
-    url = {https://CRAN.R-project.org/package=magrittr},
-  }
-
-
-  @Manual{infuser,
-    title = {infuser: A Very Basic Templating Engine},
-    author = {Bart Smeets},
-    year = {2017},
-    note = {R package version 0.2.8},
-    url = {https://CRAN.R-project.org/package=infuser},
-  }
-
-  @Manual{countrycode,
-    title = {countrycode: Convert Country Names and Country Codes},
-    author = {Vincent Arel-Bundock},
-    year = {2017},
-    note = {R package version 0.19},
-    url = {https://CRAN.R-project.org/package=countrycode},
-  }
-
-
-  @Manual{tidyr,
-    title = {tidyr: Easily Tidy Data with 'spread()' and 'gather()' Functions},
-    author = {Hadley Wickham and Lionel Henry},
-    year = {2017},
-    note = {R package version 0.7.2},
-    url = {https://CRAN.R-project.org/package=tidyr},
-  }
-
-
-  @Manual{purrr,
-    title = {purrr: Functional Programming Tools},
-    author = {Lionel Henry and Hadley Wickham},
-    year = {2017},
-    note = {R package version 0.2.4},
-    url = {https://CRAN.R-project.org/package=purrr},
-  }
-
-  @Manual{formattable,
-    title = {formattable: Create 'Formattable' Data Structures},
-    author = {Kun Ren and Kenton Russell},
-    year = {2016},
-    note = {R package version 0.2.0.1},
-    url = {https://CRAN.R-project.org/package=formattable},
-  }
-
-
-  @Manual{webshot,
-    title = {webshot: Take Screenshots of Web Pages},
-    author = {Winston Chang},
-    year = {2017},
-    note = {R package version 0.5.0},
-    url = {https://CRAN.R-project.org/package=webshot},
-  }
-
-
-  @Manual{htmltools,
-    title = {htmltools: Tools for HTML},
-    author = {{RStudio} and {Inc.}},
-    year = {2017},
-    note = {R package version 0.3.6},
-    url = {https://CRAN.R-project.org/package=htmltools},
-  }
-
-
-  @Manual{aod,
-    title = {aod: Analysis of Overdispersed Data},
-    author = {{Lesnoff} and {M.} and {Lancelot} and {R.}},
-    year = {2012},
-    note = {R package version 1.3},
-    url = {http://cran.r-project.org/package=aod},
-  }
-
-
-  @Manual{devtools,
-    title = {devtools: Tools to Make Developing R Packages Easier},
-    author = {Hadley Wickham and Winston Chang},
-    year = {2017},
-    note = {R package version 1.13.1},
-    url = {https://CRAN.R-project.org/package=devtools},
-  }
-
-
-
-  @Manual{margins,
-    title = {margins: Marginal Effects for Model Objects},
-    author = {Thomas J. Leeper},
-    year = {2017},
-    note = {R package version 0.3.0},
-  }
-
-
-
-  @Manual{mfx,
-    title = {mfx: Marginal Effects, Odds Ratios and Incidence Rate Ratios for GLMs},
-    author = {Alan Fernihough},
-    year = {2014},
-    note = {R package version 1.1},
-    url = {https://CRAN.R-project.org/package=mfx},
-  }
-
-
-  @Book{ggplot2,
-    author = {Hadley Wickham},
-    title = {ggplot2: Elegant Graphics for Data Analysis},
-    publisher = {Springer-Verlag New York},
-    year = {2009},
-    isbn = {978-0-387-98140-6},
-    url = {http://ggplot2.org},
-  }
-
-
-  @Manual{gridExtra,
-    title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
-    author = {Baptiste Auguie},
-    year = {2016},
-    note = {R package version 2.2.1},
-    url = {https://CRAN.R-project.org/package=gridExtra},
-  }
-
-  @Manual{stats,
-    title = {R: A Language and Environment for Statistical Computing},
-    author = {{R Core Team}},
-    organization = {R Foundation for Statistical Computing},
-    address = {Vienna, Austria},
-    year = {2016},
-    url = {https://www.R-project.org/},
-  }
-
-  @Manual{matrix,
-    title = {Matrix: Sparse and Dense Matrix Classes and Methods},
-    author = {Douglas Bates and Martin Maechler},
-    year = {2017},
-    note = {R package version 1.2-12},
-    url = {https://CRAN.R-project.org/package=Matrix},
-  }
-
